--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/server.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/server.js\" \"sass --no-source-map --watch src/styles/main.scss dist/public/css/main.css\""
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/server.js\" \"sass --no-source-map --watch src/styles/main.scss dist/public/css/main.css\" \"cpx src/public/**/*.{html,js} dist/public --watch\""
   },
   "author": "Ostoja",
   "license": "GPLv3",
@@ -22,6 +22,7 @@
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.18",
     "concurrently": "^7.6.0",
+    "cpx": "^1.5.0",
     "nodemon": "^2.0.20",
     "typescript": "^4.9.4"
   }
