--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "concurrently \"npx tsc\" \"cpx src/public/**/*.{html,js} dist/public\"",
     "start": "node dist/server.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/server.js\" \"sass --no-source-map --watch src/styles/main.scss dist/public/css/main.css\" \"cpx src/public/**/*.{html,js} dist/public --watch\""
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/server.js\" \"sass --no-source-map --watch src/styles/main.scss dist/public/css/main.css\" \"cpx src/public/**/*.{html,js,png} dist/public --watch\""
   },
   "author": "Ostoja",
   "license": "GPLv3",
@@ -16,11 +16,15 @@
     "express": "^4.18.2",
     "jquery": "^3.6.3",
     "mongoose": "^6.8.4",
-    "sass": "^1.57.1"
+    "sass": "^1.57.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.18",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "concurrently": "^7.6.0",
     "cpx": "^1.5.0",
     "nodemon": "^2.0.20",
